@@ -5,7 +5,7 @@ using System.Collections.Generic;
 ///import com.robotacid.engine.Portal;
 ///import com.robotacid.gfx.Renderer;
 ///import com.robotacid.level.Content;
-///import com.robotacid.level.Map;
+using com.robotacid.level;
 ///import com.robotacid.sound.SoundManager;
 using com.robotacid.ui;
 ///import com.robotacid.ui.menu.Menu;
@@ -26,8 +26,8 @@ namespace redroguecs {
 ///		previousLevel:Map.OVERWORLD;
 ///		previousPortalType:Portal.STAIRS;
 ///		previousMapType:Map.AREA;
-///		currentLevel:1;
-///		currentMapType:Map.MAIN_DUNGEON;
+		public int currentLevel = 1;
+		public int currentMapType = Map.MAIN_DUNGEON;
 		public XML xml = null;
 ///		health:0;
 ///		xp:0;
